2015-12-10 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.1.0

	* Made the height field in video record mandatory
	* Changed the order of the tca fields for video records (title to top)
	* Made the tca labels for the plugins translatable
	* Corrected the label name for single videos
	* Changed the labels for video standard width and height
	* Deleted unsued template files
	* Changed version to 0.1.0
	* Changed state to beta

2015-12-08 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Added the logic to yesterdays new flexforms to override the video
	  record width and height settings in the plugin flexforms
	* Added correct multi language approach to the flexform labels

2015-12-06 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Added new flexform fields for video width and height to the plugins to
	  overwrite the settings oh the video / video list records

2015-12-04 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Implemented the correct m:n functionality between videos and video lists
	* Added the flexforms for the backend plugins
	* Added new showSingleVideo and showVideoLists actions to the controllers
	* Added new template files for the new actions
	* Code cleanup: deleted unused actions and template files
	* Rearranged the single video templates for a better output
	* Rearranged the video lists template for putting out the list data and the
	  associated videos

2015-12-03 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Replaced the standard icons with vimeo ones
	* Added the Assets folder to .gitignore
	* Added german translations

2015-11-30 Jari-Hermann Ernst, M.A.  <jari-hermann.ernst@bad-gmbh.de> V0.0.0

	* Initial state kiskstarted with the ExtensionBuilder
	* Added this ChangeLog file
	* Set the version to 0.0.0
	* Changes the label field of the video tca to the title