@@ -32,6 +32,15 @@
                     </config>
                 </TCEforms>
             </settings.width>
+            <settings.showDescriptions>
+                <TCEforms>
+                    <exclude>1</exclude>
+                    <label>LLL:EXT:jhe_vimeo/Resources/Private/Language/locallang_csh_tx_jhevimeo_domain_model_videolist.xml:tx_jhevimeo_domain_model_videolist.showDescriptions</label>
+                    <config>
+                        <type>check</type>
+                    </config>
+                </TCEforms>
+            </settings.showDescriptions>
         </el>
     </ROOT>
 </T3DataStructure>
