@@ -15,6 +15,7 @@
 			<label index="video_lists.description">videoLists</label>
 			<label index="tx_jhevimeo_domain_model_video.selectVideoLabel">Select video</label>
 			<label index="tx_jhevimeo_domain_model_video.videoWidthLabel">Video width</label>
+			<label index="tx_jhevimeo_domain_model_video.showDescription">Show description</label>
 		</languageKey>
 		<languageKey index="de" type="array">
 			<label index="vimeoid.description">Vimeo-ID</label>
@@ -25,6 +26,7 @@
 			<label index="video_lists.description">Video-Listen</label>
 			<label index="tx_jhevimeo_domain_model_video.selectVideoLabel">Video auswählen</label>
 			<label index="tx_jhevimeo_domain_model_video.videoWidthLabel">Breite des Videos</label>
+			<label index="tx_jhevimeo_domain_model_video.showDescription">Zeige Beschreibungstext</label>
 		</languageKey>
 	</data>
 </T3locallang>
