@@ -1,9 +1,13 @@
 <h3>{videoList.title}</h3>
-<p><f:format.html>{videoList.description}</f:format.html></p>
+<f:if condition="{settings.showDescriptions}">
+	<p><f:format.html>{videoList.description}</f:format.html></p>
+</f:if>
 
 <f:for each="{videoList.videos}" as="video">
 	<h4>{video.title}</h4>
-	<p><f:format.html>{video.description}</f:format.html></p>
+	<f:if condition="{settings.showDescriptions}">
+		<p><f:format.html>{video.description}</f:format.html></p>
+	</f:if>
 	<f:if condition="{videoDimensions.width} != 0">
 		<f:then>
 			<iframe src="https://player.vimeo.com/video/{video.vimeoid}" width="{videoDimensions.width}" height="{f:cObject(typoscriptObjectPath:'lib.math', data:'({videoDimensions.width}*{video.height})/{video.width}')}" frameborder="0" webkitallowfullscreen mozallowfullscreen allowfullscreen></iframe>
