@@ -13,5 +13,5 @@ Otherwise your changes will be overwritten the next time you save the extension 
 
 <f:section name="main">
   <f:flashMessages />
-  <f:render partial="Video/Properties" arguments="{video:video, videoDimensions:videoDimensions}" />
+  <f:render partial="Video/Properties" arguments="{video:video, videoDimensions:videoDimensions, settings:settings}" />
 </f:section>
